General bug fixes. Added challenges back in. Moved menu stuff to localized path.

--- a/src/main/resources/Skylands.cfg
+++ b/src/main/resources/Skylands.cfg
@@ -4,17 +4,17 @@
 
 # *****
 # LOG LEVEL:
-# Set the level of the logs for the XIS plugin.
+# Set the level of the logs for the Skylands plugin.
 # Options are: off, fatal, error, warn, info, debug, trace, all
 # *****
 log.level=info
 
 # *****
 # WORLD NAME:
-# The name of the world that is created for the XIS islands.
+# The name of the world that is created for the Skylands islands.
 # *****
 
-# worldName=xis
+# worldName=skylands
 
 # *****
 # MAX SIZE:
@@ -30,87 +30,3 @@ log.level=info
 # *****
 
 # islandHeight=64
-
-# *****
-# BLOCK REMOVE IGNORE:
-# The types of blocks that are ignored when subtracting score for their removal.
-# *****
-
-block.remove.ignore = cobble,tree
-
-# *****
-# BLOCK TYPE VALUES:
-# The base score value for each type of block.
-# *****
-
-block.type.cobble = 1
-block.type.cobblestone = 1
-block.type.tree = 1
-block.type.dirt = 10
-block.type.glass = 10
-block.type.wool = 8
-block.type.clay = 10
-block.type.stone = 5
-block.type.wood = 5
-block.type.brick = 20
-block.type.quartz = 50
-block.type.sand = 20
-block.type.sandstone = 40
-block.type.coal = 50
-block.type.iron = 100
-block.type.gold = 200
-block.type.redstone = 10
-block.type.lapis = 100
-block.type.emerald = 800
-block.type.diamond = 500
-block.type.obsidian = 50
-block.type.slime = 10
-block.type.hay = 10
-block.type.ice = 20
-block.type.beacon = 2000
-
-block.type.fancy = 10
-block.type.electronics = 5
-block.type.rail = 50
-block.type.decoration = 10
-block.type.specialty = 15
-
-# *****
-# BLOCK VARIANT VALUES:
-# The multiplier of the base score value for each variant type.
-# *****
-
-block.variant.multiplier.ore = 1
-block.variant.multiplier.slab = 2
-block.variant.multiplier.block = 4
-block.variant.multiplier.stair = 5
-block.variant.multiplier.fence = 6
-block.variant.multiplier.carpet = 3
-block.variant.multiplier.pane = 2
-block.variant.multiplier.machine = 4
-block.variant.multiplier.simple = 2
-block.variant.multiplier.basic = 4
-block.variant.multiplier.moderate = 9
-block.variant.multiplier.advanced = 25
-
-# *****
-# BLOCK COLOR VALUES:
-# The multiplier of the base score value for each block color type.
-# *****
-
-block.color.multiplier.black = 1
-block.color.multiplier.blue = 2
-block.color.multiplier.brown = 1
-block.color.multiplier.cyan = 2
-block.color.multiplier.gray = 1
-block.color.multiplier.green = 1
-block.color.multiplier.light_blue = 2
-block.color.multiplier.light_gray = 1
-block.color.multiplier.lime = 1
-block.color.multiplier.magenta = 2
-block.color.multiplier.orange = 1
-block.color.multiplier.pink = 1
-block.color.multiplier.purple = 2
-block.color.multiplier.red = 1
-block.color.multiplier.white = 1
-block.color.multiplier.yellow = 1
